<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    tools:context=".permissions.PermissionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp">

    <ImageView
        android:id="@+id/img_permission"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:contentDescription="@string/permission_image_desc"
        android:src="@drawable/ic_permission"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_permission_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/permission_title"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_permission_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/permission_description"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_grant_permission"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:text="@string/grant_permission"
        android:textSize="@dimen/_14ssp"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
