<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".permissions.GetStartedActivity">

    <View
        android:id="@+id/topBackground"
        android:layout_width="match_parent"
        android:layout_height="950dp"
        android:background="@drawable/bg_splash"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/_200sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/topBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_42sdp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="@dimen/_34ssp"/>

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/get_started_slogan"
            android:textColor="#DAD8FF"
            android:textSize="@dimen/_12ssp"
            android:letterSpacing="0.12"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/welcome_to_focusflow"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"/>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/get_started_description"
            android:textColor="#EAEAFF"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_56sdp"
            android:layout_marginTop="@dimen/_32sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_6sdp"
            app:cardBackgroundColor="@android:color/white">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="GET STARTED"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"/>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
